<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_main_new_background"
    android:layout_height="match_parent"
    tools:context="com.rvtech.turbovpn.vpn.activity.Faq">


    <include
        android:id="@+id/tool_bar_faq"
        layout="@layout/app_toolbar"
        android:visibility="visible"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/faq_toolbar"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_arrow_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq"
            android:textSize="18dp"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/tool_bar_faq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FAQ"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/text_color"
                android:layout_marginRight="10dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/question2_answer"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/question3_answer"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:text="   In most Android devices, open Android's Setting-->Battery-->Battery optimization, select All apps in the dropdown menu, find SuperVPN and set it to Don't optimize.
In HuaWei devices, open Android's Setting-->Battery-->Launch, find SuperVPN in the app list, switch off to Manage manually, enable Auto-launch and Run in background.\n
   Or you can find battery setting in Protected Apps.\n
   In Samsung devices, open Android's Setting-->Battery-->App Power Saving-->Details, find SuperVPN in the app list and disabled it.\n
   In other devices, you may find it in Setting-->Battery as Background activity or Protected apps."

                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:text="@string/question5"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        />
                    <com.google.android.gms.ads.AdView
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/faqads"
                        android:layout_gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        ads:adSize="BANNER"


                        ads:adUnitId="@string/banner">
                    </com.google.android.gms.ads.AdView>


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
